--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Image-XBin
-version:      0.03
+version:      0.04
 version_from: lib/Image/XBin.pm
 installdirs:  site
 requires:
     Class::Accessor:               0
     File::SAUCE:                   0.12
+    File::Temp:                    0
+    GD:                            2.17
     IO::File:                      0
     IO::String:                    0
 
